# test_task2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
test_task1/: __init__.py  matrix_loader.py  matrix_parser.py  matrix_spiral_traversal.py  matrix_traversal_base.py
tests/: conftest.py  fixtures.json  test_matrix_loader.py  test_matrix_parser.py  test_matrix_spiral_traversal.py
